alignment fixed

--- a/style.css
+++ b/style.css
@@ -79,12 +79,6 @@
 	font-size:20px;
 }
 
-.bottom_wrap{
-  width:1200px;
-  margin:auto;
-  display:flex;
-  align-items:flex-start;
-}
 .bottom_up{
 	width:100%;
 	background-color:white;
